--- a/Module2_DOM/ToDo_App/activity/index.html
+++ b/Module2_DOM/ToDo_App/activity/index.html
@@ -13,19 +13,9 @@
     </div>
     <div class="todos-container">
         <ul class = "todos-list">
-            <li class="todo-item">
-                <p class="todo">Learn HTML!</p>
-                 <button class="delete-todo">Delete</button>
-            </li>
-            <li class="todo-item">
-                <p class="todo">Learn HTML!</p>
-                 <button class="delete-todo">Delete</button>
-            </li>
-            <li class="todo-item">
-                <p class="todo">Learn HTML!</p>
-                 <button class="delete-todo">Delete</button>
-            </li>
+            
         </ul>
     </div>
+    <script src = "./script.js"></script>
 </body>
 </html>
