--- a/Module2_DOM/Ticket_Management_Clone/activity/index.html
+++ b/Module2_DOM/Ticket_Management_Clone/activity/index.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="input-container">
-        <input type="text" class="todo-input">
-        <button class="add-todo">Add Todo</button>
-    </div>
-    <div class="todos-container">
-        <ul class = "todos-list">
+    <div>
+        <div>
             
-        </ul>
+        </div>
+        <div>
+
+        </div>
     </div>
-    <script src = "./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
