Ticket Management Clone

--- a/Module2_DOM/Lec2_Ticket_Management_Clone/activity/index.html
+++ b/Module2_DOM/Lec2_Ticket_Management_Clone/activity/index.html
@@ -30,6 +30,12 @@
         </div>
         <div class="tickets-container">
 
+            <!-- <div class="ticket">
+                <div class="ticket-filter green"></div>
+                <div class="ticket-id">#exampleId</div>
+                <div class="ticket-content">lkansfklankslfnklanslfnalksnfklnalksnfklansklfnlaknsflknaklsfnklansf</div>
+            </div> -->
+
             <!-- MODAL -->
             <!-- <div class="modal">
                 <div class="modal-textbox" contenteditable="true">
@@ -39,7 +45,7 @@
                     <div class="modal-filter red"></div>
                     <div class="modal-filter blue"></div>
                     <div class="modal-filter green"></div>
-                    <div class="modal-filter black"></div>
+                    <div class="modal-filter black active-filter"></div>
                 </div>
             </div> -->
 
