--- a/Module2_DOM/Lec2_Ticket_Management_Clone/activity/index.html
+++ b/Module2_DOM/Lec2_Ticket_Management_Clone/activity/index.html
@@ -51,6 +51,10 @@
 
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js"></script>
+    <script>
+        let uid = new ShortUniqueId();
+    </script>
     <script src="./script.js"></script>
 </body>
 </html>
